# rustapi

./: .gitignore  Cargo.toml  README.md  diesel.toml  src.schema.rs
migrations/2026-04-23-044856-0000_create_users/: down.sql  up.sql
migrations/2026-04-24-102020-0000_create_posts/: down.sql  up.sql
migrations/2026-04-28-121843-0000_create_comments/: down.sql  up.sql
migrations/2026-04-28-135225-0000_create_refresh_tokens/: down.sql  up.sql
migrations/2026-05-03-021453-0000_create_likes/: up.sql
migrations/2026-05-21-032150-0000_remove_unique_from_sanity_asset_id/: down.sql  up.sql
migrations/2026-06-19-095428-0000_convert_post_asset_to_jsonb/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/auth/: claims.rs  current_user.rs  mod.rs
src/handlers/: auth.rs  comments.rs  health.rs  login.rs  mod.rs  posts.rs  refresh.rs  users.rs
src/handlers/admin/: admin_handler.rs  mod.rs
src/handlers/login/: login_handler.rs  mod.rs  refresh.rs
src/handlers/posts/: all_posts.rs  all_posts_handler.rs  comments.rs  image_handler.rs  mod.rs  post_handler.rs  post_handlers.rs
src/handlers/users/: login_handler.rs  mod.rs  refresh.rs  user_handler.rs
src/models/: comments.rs  likes.rs  mod.rs  posts.rs  refresh.rs  users.rs
src/routes/: admin_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/utils/: app_error.rs  app_state.rs  db_error.rs  error.rs  hash.rs  mod.rs  password.rs  sanity_helpers.rs  workers.rs
src/utils/error/: app_error.rs  db_error.rs  mod.rs
src/utils/state/: app_state.rs  config.rs  mod.rs
